--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--link rel="stylesheet" href="assets//css/devicon-master/devicon.css"-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
   <link rel="shortcut icon" href="assest/css/img/2cef1b56a04a1dc21b0bcd60_rw_600.gif">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!--link rel="stylesheet" href="assets//css/devicon-master/devicon.css"-->
@@ -16,12 +16,12 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="assest/css/main.css">
 </head>
-<body class="grey darken-2">
+<body>
 <!-- sideNav -->
 <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper grey darken-4">
-      <a href="#!" class="brand-logo"></a>
+      <div class="nav-wrapper black">
+      <a href="https://en.leviev-group.com/templates/leviev/resources/images/preloader-logo.svg" class="brand-logo"></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#about">About</a></li>
@@ -38,28 +38,31 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-  
   <!-- sideNav -->
   <section id="about">
-<h1>About me</h1>
 <div class="row">
-<div class="col m6 l6 s12">
- <p class="text-one">
-   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem reprehenderit, quaerat qui sapiente laboriosam, iure nobis. Commodi illum, aliquam ex ea cum labore, architecto explicabo, ratione quas tempore similique vel.
- </p>
+  <div class="col m12 l12 s12" >
+    <h1 class="center">HELLO</h1>
+  </div>
  </div>
+ <div class="row">
+   <div class="col m6 l6 s12">
+     <p class="text-one">
+    <h2>a bit about me,</h2>
+     Everything started with passion to web technologies.
+     I studied front end development at Laboratoria Chile, where I've acquired some skills to web development like react and agile methodology.
+    </p>
+  </div>
  <div class="col m6 l6 s12">
-   <img class="responsive-img" src="assest/css/img/02-1User_13-512.png" alt="user">
+   <!--img class="circle responsive-img" src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="user"-->
  </div>
-</div>
+ </div>
   </section>
   <section id="skills">
-    <h1>
-      Technical Skills
-    </h1>
+    <h1 class="center">Skills</h1>
     <div id="myCanvasContainer">
     <div class="col s2 m12 l12">
- <canvas width="400" height="400" id="myCanvas">
+ <canvas width="300" height="400" id="myCanvas">
   <p>Anything in here will be replaced on browsers that support the canvas element</p>
   <ul>
   <li><a>NodeJs</a></li>
@@ -91,12 +94,13 @@
  </div>
 </div>
   </section>
-  <section id="projects">
-<h1>My Works</h1>
-<div class="main">
+  <div id="desborde">
+<section id="projects">
+  <h1>Projects</h1>
+  <div class="main">
 <div class="row">
-<div class="col s12 ">
 <ul class="ch-grid">
+<div class="col s12 l4 m4">
   <li>
     <div class="ch-item ch-img-1">
       <div class="ch-info-wrap">
@@ -109,7 +113,9 @@
         </div>
       </div>
     </div>
-          </li>
+    </li>
+</div>
+<div class="col s12 l4 m4">
           <li>
             <div class="ch-item ch-img-2">
               <div class="ch-info-wrap">
@@ -123,6 +129,8 @@
               </div>
             </div>
           </li>
+</div>
+<div class="col s12 l4 m4">
           <li>
             <div class="ch-item ch-img-3">
               <div class="ch-info-wrap">
@@ -137,22 +145,24 @@
             </div>
           </li>
         </ul>
+        </div>
       </div>
       </div>
       </div>
 </section>
 <section id="contact">
   <div class="row">
-    <div class="col s12 ">
-      <h1 id="hc">Contact</h1>
+    <div class="col s12 l12 m12">
+      <h1 class="center">Contact</h1>
       <div class="carousel">
         <a class="carousel-item" href="https://www.linkedin.com/in/carolina-saavedra-lizama/"><img src="assest/css/img/linkedin.png" alt=""></a>
         <a class="carousel-item" href="https://github.com/saahub"><img src="assest/css/img/25231.svg" alt=""></a>
         <a class="carousel-item" href="mailto:saa.lizama@gmail.com"><img src="assest/css/img/descarga.png" alt=""></a>
+        <a class="carousel-item" href="mailto:saa.lizama@gmail.com"><img src="assest/css/img/social.png" alt=""></a>
       </div>
     </div>
   </div>
-</section>
+  </section>
   <script src="assest/js/app.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
      <script src="assest/js/jquery.tagcanvas.min.js"></script>
