--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
   <!-- sideNav -->
   <section id="about">
 <div class="row">
-  <div class="col m12 l12 s12" >
+  <div class="col m6 l6 s12" >
     <h1 class="center">HELLO</h1>
-  </div>
- </div>
- <div class="row">
-   <div class="col m6 l6 s12">
      <p class="text-one">
     <h2>a bit about me,</h2>
      Everything started with passion to web technologies.
@@ -54,7 +50,7 @@
     </p>
   </div>
  <div class="col m6 l6 s12">
-   <!--img class="circle responsive-img" src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="user"-->
+   <img class="circle responsive-img picture" src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="user">
  </div>
  </div>
   </section>
