img color navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!--link rel="stylesheet" href="assets//css/devicon-master/devicon.css"-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore" rel="stylesheet">
   <link rel="shortcut icon" href="assest/css/img/2cef1b56a04a1dc21b0bcd60_rw_600.gif">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!--link rel="stylesheet" href="assets//css/devicon-master/devicon.css"-->
@@ -42,6 +43,7 @@
   <section id="about">
 <div class="row">
   <div class="col m6 l6 s12" >
+  <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
     <h1 class="center">HELLO</h1>
      <p class="text-one">
     <h2>a bit about me,</h2>
@@ -154,7 +156,7 @@
         <a class="carousel-item" href="https://www.linkedin.com/in/carolina-saavedra-lizama/"><img src="assest/css/img/linkedin.png" alt=""></a>
         <a class="carousel-item" href="https://github.com/saahub"><img src="assest/css/img/25231.svg" alt=""></a>
         <a class="carousel-item" href="mailto:saa.lizama@gmail.com"><img src="assest/css/img/descarga.png" alt=""></a>
-        <a class="carousel-item" href="mailto:saa.lizama@gmail.com"><img src="assest/css/img/social.png" alt=""></a>
+        <a class="carousel-item" href="mhttps://slack.com/intl/es"><img src="assest/css/img/social.png" alt=""></a>
       </div>
     </div>
   </div>
