media query about

--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
   <section id="about">
 <div class="row">
   <div class="col m6 l6 s12" >
-  <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
     <h1 class="center">HELLO</h1>
      <p class="text-one">
-    <h2>a bit about me,</h2>
+    <h2 class="media">a bit about me,</h2>
      Everything started with passion to web technologies.
      I studied front end development at Laboratoria Chile, where I've acquired some skills to web development like react and agile methodology.
     </p>
