--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--link rel="stylesheet" href="assets//css/devicon-master/devicon.css"-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link rel="shortcut icon" href="assest/css/img/2cef1b56a04a1dc21b0bcd60_rw_600.gif">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!--link rel="stylesheet" href="assets//css/devicon-master/devicon.css"-->
@@ -39,21 +38,18 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-  <!-- sideNav -->
-  <section id="about">
-<div class="row">
-  <div class="col m6 l6 s12" >
-    <h1 class="center">HELLO</h1>
-     <p class="text-one">
-    <h2 class="media">a bit about me,</h2>
-     Everything started with passion to web technologies.
-     I studied front end development at Laboratoria Chile, where I've acquired some skills to web development like react and agile methodology.
-    </p>
-  </div>
- <div class="col m6 l6 s12">
-   <img class="circle responsive-img picture" src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="user">
- </div>
- </div>
+  <!-- end sideNav -->
+   <section id="about" class="valign-wrapper">
+    <div class="container row">
+      <div class="col s12 m5 center">
+        <img src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="myprofile" class="circle responsive-img">
+      </div>
+      <div class="col s12 m7 center txt">
+        <h2>Hello ,a bit about me</h2>
+        <p class="big">Everything started with passion to web technologies.
+        I studied front end development at Laboratoria Chile, where I've acquired some skills to web development like react and agile methodology.</p>
+      </div>
+    </div>
   </section>
   <section id="skills">
     <h1 class="center">Skills</h1>
@@ -98,7 +94,7 @@
 <div class="row">
 <ul class="ch-grid">
 <div class="col s12 l4 m4">
-  <li>
+  <li class="orden">
     <div class="ch-item ch-img-1">
       <div class="ch-info-wrap">
         <div class="ch-info">
