--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a href="https://en.leviev-group.com/templates/leviev/resources/images/preloader-logo.svg" class="brand-logo"></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
+      <li><a href="#welcome">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -33,26 +34,38 @@
  </nav>
     </div>
          <ul class="side-nav" id="mobile-demo">
+         <li><a href="#welcome">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
   <!-- end sideNav -->
+  <!-- welcome -->
+  <section id="welcome">
+    <div class="container">
+      <div class="row">
+        <div class="col l12 ">
+          <h1 class="reveal">maldito portafolio</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
    <section id="about" class="valign-wrapper">
     <div class="container row">
       <div class="col s12 m5 center">
-        <img src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="myprofile" class="circle responsive-img">
+        <img src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="myprofile" class="circle responsive-img reveal">
       </div>
       <div class="col s12 m7 center txt">
-        <h2>Hello ,a bit about me</h2>
-        <p class="big">Everything started with passion to web technologies.
+        <h2 class="reveal">Hello ,a bit about me</h2>
+        <p class="big reveal">Everything started with passion to web technologies.
         I studied front end development at Laboratoria Chile, where I've acquired some skills to web development like react and agile methodology.</p>
       </div>
     </div>
   </section>
   <section id="skills">
-    <h1 class="center">Skills</h1>
+    <h1 class="center reveal">Skills</h1>
     <div id="myCanvasContainer">
     <div class="col s2 m12 l12">
  <canvas width="300" height="400" id="myCanvas">
@@ -91,7 +104,7 @@
 <section id="projects">
   <h1>Projects</h1>
   <div class="main">
-<div class="row">
+<div class="row reveal">
 <ul class="ch-grid">
 <div class="col s12 l4 m4">
   <li class="orden">
@@ -144,8 +157,8 @@
       </div>
 </section>
 <section id="contact">
-  <div class="row">
-    <div class="col s12 l12 m12">
+  <div class="row reveal">
+    <div class="col s12 l12 m12 ">
       <h1 class="center">Contact</h1>
       <div class="carousel">
         <a class="carousel-item" href="https://www.linkedin.com/in/carolina-saavedra-lizama/"><img src="assest/css/img/linkedin.png" alt=""></a>
@@ -158,6 +171,7 @@
   </section>
   <script src="assest/js/app.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
      <script src="assest/js/jquery.tagcanvas.min.js"></script>
      <script src="assest/js/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
