--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col l12 ">
-          <h1 class="reveal">maldito portafolio</h1>
+          <h1 class="reveal">Welcome I'm Carolina, Front-End Developer</h1>
         </div>
       </div>
     </div>
