--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="assest/css/img/Copy of SCL172123 Carolina Saavedra.jpg" alt="myprofile" class="circle responsive-img reveal">
       </div>
       <div class="col s12 m7 center txt">
-        <h2 class="reveal">Hello ,a bit about me</h2>
+        <h2 class="reveal">A bit about me</h2>
         <p class="big reveal">Everything started with passion to web technologies.
         I studied front end development at Laboratoria Chile, where I've acquired some skills to web development like react and agile methodology.</p>
       </div>
