--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
   <section id="welcome">
     <div class="container">
       <div class="row">
-        <div class="col l12 ">
-          <h1 class="reveal">Welcome I'm Carolina, Front-End Developer</h1>
+        <div class="col l12">
+          <h1 class="reveal center" style="color:#000">Welcome </h1>
+          <h1 class="reveal center" style="color:#000">I'm Carolina, Front-End Developer</h1>
         </div>
       </div>
     </div>
@@ -157,9 +158,10 @@
       </div>
 </section>
 <section id="contact">
+<div class="container">
   <div class="row reveal">
     <div class="col s12 l12 m12 ">
-      <h1 class="center">Contact</h1>
+      <h1 class="center" style="color: #000">Contact</h1>
       <div class="carousel">
         <a class="carousel-item" href="https://www.linkedin.com/in/carolina-saavedra-lizama/"><img src="assest/css/img/linkedin.png" alt=""></a>
         <a class="carousel-item" href="https://github.com/saahub"><img src="assest/css/img/25231.svg" alt=""></a>
@@ -168,6 +170,7 @@
       </div>
     </div>
   </div>
+</div>
   </section>
   <script src="assest/js/app.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
