--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="welcome">
     <div class="container">
       <div class="row">
-        <div class="col l12">
+        <div class="col s12 l12">
           <h1 class="reveal center" style="color:#000">Welcome </h1>
           <h1 class="reveal center" style="color:#000">I'm Carolina, Front-End Developer</h1>
         </div>
@@ -103,7 +103,7 @@
   </section>
   <div id="desborde">
 <section id="projects">
-  <h1>Projects</h1>
+  <h1 class="center">Projects</h1>
   <div class="main">
 <div class="row reveal">
 <ul class="ch-grid">
