--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
     <div class="container">
       <div class="row">
         <div class="col s12 l12">
-          <h1 class="reveal center" style="color:#000">Welcome </h1>
-          <h1 class="reveal center" style="color:#000">I'm Carolina, Front-End Developer</h1>
+          <h1 class="reveal center" style="color:#000">Welcome</h1>
+          <h2 class="reveal center" style="color:#000">I'm Carolina, Front-End Developer</h2>
         </div>
       </div>
     </div>
   </section>
-
    <section id="about" class="valign-wrapper">
     <div class="container row">
       <div class="col s12 m5 center">
@@ -164,7 +163,7 @@
       <h1 class="center" style="color: #000">Contact</h1>
       <div class="carousel">
         <a class="carousel-item" href="https://www.linkedin.com/in/carolina-saavedra-lizama/"><img src="assest/css/img/linkedin.png" alt=""></a>
-        <a class="carousel-item" href="https://github.com/saahub"><img src="assest/css/img/25231.svg" alt=""></a>
+        <a class="carousel-item" href="https://github.com/saahub"><img src="assest/css/img/GitHub-Mark-Light-120px-plus.png" alt=""></a>
         <a class="carousel-item" href="mailto:saa.lizama@gmail.com"><img src="assest/css/img/descarga.png" alt=""></a>
         <a class="carousel-item" href="mhttps://slack.com/intl/es"><img src="assest/css/img/social.png" alt=""></a>
       </div>
