--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </section>
   <div id="desborde">
 <section id="projects">
-  <h1 class="center">Projects</h1>
+  <h1 class="center reveal">Projects</h1>
   <div class="main">
 <div class="row reveal">
 <ul class="ch-grid">
