--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
       </ul>
   <!-- end sideNav -->
   <!-- welcome -->
-  <section id="welcome">
-    <div class="container">
-      <div class="row">
+  <section id="welcome" class="valign-wrapper">
+    <div class="container row" >
         <div class="col s12 l12">
-          <h1 class="reveal center" style="color:#000">Welcome</h1>
-          <h2 class="reveal center" style="color:#000">I'm Carolina, Front-End Developer</h2>
+          <h1 class="reveal center" style="color:#000">Welcome
+          I'm Carolina, Front-End Developer</h1>
         </div>
       </div>
     </div>
