--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <div class="ch-info">
                   <div class="ch-info-front ch-img-2"></div>
                   <div class="ch-info-back">
-                    <h3>Project Find Me</h3>
-                    <p>Use Api Google Maps<a href="https://saahub.github.io/EasyV-ride/">View on GitHub</a></p>
+                    <h3>MoviePop</h3>
+                    <p>Use login and search<a href="https://saahub.github.io/MoviePop/">View on GitHub</a></p>
                   </div>
                 </div>
               </div>
@@ -142,8 +142,8 @@
                 <div class="ch-info">
                   <div class="ch-info-front ch-img-3"></div>
                   <div class="ch-info-back">
-                    <h3>MoviePop</h3>
-                    <p>Use login and search<a href="https://saahub.github.io/MoviePop/">View on Dribbble</a></p>
+                    <h3>Project Find Me</h3>
+                    <p>Use Api Google Maps<a href="https://saahub.github.io/EasyV-ride/">View on Dribbble</a></p>
                   </div>
                 </div>
               </div>
